two lines that mimic algorithm learning models

--- a/public/views/scatter.html
+++ b/public/views/scatter.html
@@ -46,7 +46,11 @@ svg {
 <body>
 
   <div class='container scatter'>
-    <h1> Regression </h1>
+    <h1> Toy Learning Problem </h1>
+    <p> Assume that we have 3 classes shown in red, blue, and green.</p>
+    <p> The features vectors are the x,y coordinates where v = [x,y]T</p>
+    <p> Split lines have the parameters a,b so that fn(v) = ax +by</p>
+    
   </div>
 
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
