first nodes of the neural network

--- a/public/views/neuralnet.html
+++ b/public/views/neuralnet.html
@@ -11,11 +11,15 @@ svg {
   border: 5px solid red;
 }
 
+circle {
+  fill: green;
+}
+
 </style>
 
 <body>
 
-  <div class='container scatter'>
+  <div class='container neuralnet'>
     <h1> Neural Network </h1>
     
   </div>
