some basic website work to plug in with angular views

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,1 +1,52 @@
-<h1>Welcome to the {{ welcome }}</h1>
+<!-- <h1>Welcome to the {{ welcome }}</h1> -->
+
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing" ng-controller='MainController'>
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Galaxy Morphology Use Case <span class="text-muted">It'll blow your mind.</span></h2>
+          <p class="lead">Image of galaxy and information about this example</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        </div>
+      </div>      
+
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Algorithms <span class="text-muted">See for yourself.</span></h2>
+        </div>
+          <p class="lead">Faded image of a visualized algorithm, clicking details leads to our algorithm page</p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">The Team <span class="text-muted">Checkmate</span></h2>
+          <p class="lead">Our Bios/Blogs</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+    <script src="../styles/bootstrapDist/js/bootstrap.min.js"></script>
+    <script src="../styles/bootstrapIndexAssets-js/docs.min.js"></script>
+
+
+      <!-- /END THE FEATURETTES -->
+
