--- a/public/views/scatter.html
+++ b/public/views/scatter.html
@@ -1,10 +1,10 @@
-<html>
+<html ng-controller='ScatterController'>
 <head>
 </head>
 
 <style>
 body {
-  font: 11px sans-serif;
+  font: 12px sans-serif;
 }
 
 .axis path,
@@ -50,7 +50,7 @@ svg {
     <p> Assume that we have 3 classes shown in red, blue, and green.</p>
     <p> The features vectors are the x,y coordinates where v = [x,y]T</p>
     <p> Split lines have the parameters a,b so that fn(v) = ax +by</p>
-    
+
   </div>
 
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
