Adds neural network image and redirects from nav bar

--- a/public/views/partials/neuralnet.html
+++ b/public/views/partials/neuralnet.html
@@ -1,6 +1,5 @@
-<html>
-<head>
-</head>
+
+
 
 <style>
 body {
@@ -20,13 +19,13 @@ circle {
 <body>
 
   <div class='container neuralnet'>
+  	<br><br><br><br>
     <h1> Neural Network </h1>
-    
+    <img src="neuralNetwork.png"></img>
   </div>
 
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="../scripts/neuralnet.js"></script>
+
 
 </body>
-</html>
