--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -49,7 +49,7 @@ path.link {
   <p>{{number}} random trees showing</p>
 
   <div>
-    <coffee></coffee>
+    <random-forest></random-forest>
   </div>
 
 </body>
