--- a/public/views/partials/neuralnet.html
+++ b/public/views/partials/neuralnet.html
@@ -18,10 +18,10 @@ circle {
 
 <body>
 
-  <div class='container neuralnet'>
+  <div class='container-neuralnet'>
   	<br><br><br><br>
     <h1> Neural Network </h1>
-    <img src="neuralNetwork.png"></img>
+    <img src="../../images/neuralNetwork.png"></img>
   </div>
 
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
