added an word cluster to the machine learning page; added an image to the mainindex

--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -2,7 +2,8 @@
 
   <div class="row featurette">
     <div class="col-md-5">
-      <img class="featurette-image img-responsive" src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <!-- <img class="featurette-image img-responsive" src="../../images/machine-learning.jpg" style="width: 500px; height: 500px;"> -->
+      <img class="featurette-image img-responsive" src="../../images/MLWordCluster.png" style="width: 500px; height: 500px;">
     </div>
     <div class="col-md-7">
       <h2 class="featurette-heading">Machine Learning <span class="text-muted">A Definition</span></h2>
