--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -9,7 +9,8 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide">
+          <!-- <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide"> -->
+          <img src="../images/machine-learning.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h1>Machine Learning Algorithms</h1>
