--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -14,7 +14,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Machine Learning Algorithms</h1>
-              <a class="btn btn-lg btn-primary" href="#/scatter" role="button">View Now</a></p>
+              <a class="btn btn-lg btn-primary" href="#/algorithms" role="button">View Now</a></p>
             </div>
           </div>
         </div>
