--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -2,6 +2,21 @@
 svg {
   border: 5px solid black;
 }
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.regression {
+  font: 10px sans-serif;
+}
+
 </style>
 
 <div class="container mlintro" ng-controller='MLIntroController'>
@@ -26,13 +41,22 @@ svg {
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">Regression <span class="text-muted">Predicting a continuous valued output</span></h2>
-      <p class="lead">The data we know (the data points shown to the right) is modeled so that unknown model parameters can be estimated.  Click on "Find Linear Regression" to see how we can best fit the data with a linear function.</p>
+      <p class="lead">The observed data is modeled so that outputs for unobserved inputs can be estimated.  </p>
+      <p class='lead'>Example: Housing Prices in Portland, Oregon<br>
+      <i>Input Variable / Feature</i> (x-axis) - Size in Square Feet<br>
+      <i>Output Variable / Target</i> (y-axis) - Price in $1000s<br>
+      With linear regression, we model the data with a straight line and then use that line to predict outputs for new inputs  
+      </p>
+      <p>
+      Click on "Find Linear Regression" to see how we can best fit the data with a linear function.<br>
+      Then click on "Predict New Data Output" to see how we use the linear regression model. 
+      </p>
     </div>
     <div class="col-md-5">
       <!-- <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
       <div class='regression'>
       </div>
-      <button ng-click='drawLine()'>Find Linear Regression</button><button ng-click='clearLine()'>Clear</button>
+      <button ng-click='drawLine()'>Find Linear Regression</button> <button ng-click='predictData()'>Predict New Data Output</button> <button ng-click='clearLine()'>Clear</button>
     </div>
   </div>      
 
@@ -43,7 +67,7 @@ svg {
       <!-- <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
       <div class='classification'>
       </div>
-      <button ng-click='classify()'>Classify Data</button> <button ng-click='clearClassify()'>Clear</button>
+      <button ng-click='classify()'>Classify Data</button> <button ng-click='predictClass()'>Predict Class</button> <button ng-click='clearClassify()'>Clear</button>
     </div>
     <div class="col-md-7">
       <h2 class="featurette-heading">Classification <span class="text-muted">Predicting a discrete valued output</span></h2>
@@ -55,11 +79,11 @@ svg {
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading">Training <span class="text-muted">Some text</span></h2>
+      <h2 class="featurette-heading">Training A Classifier <span class="text-muted">Process</span></h2>
       <p class="lead">Some Text Here and a diagram of training</p>
     </div>
     <div class="col-md-5">
-      <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <img class="featurette-image img-responsive" src="../../images/supervised-classification.png" alt="Generic placeholder image">
     </div>
   </div>      
 
