updated some Classification text

--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -41,7 +41,7 @@ svg {
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">Regression <span class="text-muted">Predicting a continuous valued output</span></h2>
-      <p class="lead">The observed data is modeled so that outputs for unobserved inputs can be estimated.  </p>
+      <p class="lead">Observed data is modeled so that outputs for unobserved inputs can be estimated.  </p>
       <p class='lead'>Example: Housing Prices in Portland, Oregon<br>
       <i>Input Variable / Feature</i> (x-axis) - Size in Square Feet<br>
       <i>Output Variable / Target</i> (y-axis) - Price in $1000s<br>
@@ -49,7 +49,7 @@ svg {
       </p>
       <p>
       Click on "Find Linear Regression" to see how we can best fit the data with a linear function.<br>
-      Then click on "Predict New Data Output" to see how we use the linear regression model. 
+      Click on "Predict New Data Output" to see how we use the linear regression model. 
       </p>
     </div>
     <div class="col-md-5">
@@ -72,18 +72,28 @@ svg {
     <div class="col-md-7">
       <h2 class="featurette-heading">Classification <span class="text-muted">Predicting a discrete valued output</span></h2>
     </div>
-      <p class="lead">  Classification divides the data we know (the data points shown to the left) into discrete categories by separating the data with a straight line.  Unknown model parameters will be estimated to be in the category on that side of the line.  Click on "Classify Data" to see the line which best divides the data. </p>
+      <p class="lead">Observed data is modeled so that unobserved data can be classified.  </p>
+      <p class='lead'>Example: Cancer<br>
+      <i>2 Features</i> - Tumor Size and Age of Patient<br>
+      <i>2 Classes</i> - Benign and Malignant<br>
+      With classification, we model the observed data to predict the class of new data based on which class the features of new data most closely resemble.
+      </p>
+      <p>
+      Click on "Classify Data" to see how we can best fit the data into two classes.<br>
+      Click on "Predict Class" to see how we use this model to predict to which class the new data belongs. 
+      </p>
   </div>
 
   <hr class="featurette-divider">
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading">Training A Classifier <span class="text-muted">Process</span></h2>
+      <h2 class="featurette-heading">Training <span class="text-muted">Process</span></h2>
       <p class="lead">Some Text Here and a diagram of training</p>
     </div>
     <div class="col-md-5">
       <img class="featurette-image img-responsive" src="../../images/supervised-classification.png" alt="Generic placeholder image">
+      <a href="http://www.nltk.org/book/ch06.html">Image Source: Python Natural Language Toolkit (NLTK) documentation</a>
     </div>
   </div>      
 
