--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -89,7 +89,15 @@ svg {
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">Training <span class="text-muted">Process</span></h2>
-      <p class="lead">Some Text Here and a diagram of training</p>
+      <p class="lead">Training a supervised machine learning algorithm involves the following iterative process: <br>
+        Collecting Data: We need data both for training and for testing the algorithm.<br>
+        Feature Choice and Model Choice: The characteristics of the data affect the features and model used.<br>
+        Training: Using the known labels for the observed data so that the algorithm learns how to model the data.<br>
+        Evaluation: To evaluate the performace of the algorithm and to go back to any one of the previous stages to enhance this performance.<br>
+      </p>
+      <p class="lead">
+        The model created from the training process is then used to predict labels on new data.
+      </p>
     </div>
     <div class="col-md-5">
       <img class="featurette-image img-responsive" src="../../images/supervised-classification.png" alt="Generic placeholder image">
