--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
     <script src='../bower_components/angular-route/angular-route.js'></script>
     <script src='../scripts/app.js'></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src='../scripts/randomTreeGenerator.js'></script>
 
     <link rel="shortcut icon" href="./../assets/ico/favicon.ico">
     <link rel='stylesheet' href="../styles/bootstrapDist/css/bootstrap.min.css" >
