minor changes to ml intro sight

--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -88,7 +88,7 @@ svg {
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading">Training <span class="text-muted">Process</span></h2>
+      <h2 class="featurette-heading">Training Process <span class="text-muted">Classification</span></h2>
       <p class="lead">Training a supervised machine learning algorithm involves the following iterative process: <br>
         Collecting Data: Data is needed for both training and testing the algorithm.<br>
         Feature Choice and Model Choice: The characteristics of the data affect the features and model used.<br>
@@ -106,7 +106,7 @@ svg {
   </div>      
 
 
-
+  <p>A thank you to <a href="https://www.coursera.org/course/ml">Andrew Ng's Coursera course on Machine Learning</a> for the examples.</p>
 </div>
 
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
