minor change to mlintro to move controller reference

--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -112,7 +112,7 @@ svg {
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
 <script src="../../styles/bootstrapIndexAssets-js/docs.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="../../scripts/controllers/mlintro.js"></script>
+<!-- <script src="../../scripts/controllers/mlintro.js"></script> -->
 <script src="../../scripts/regression.js"></script>
 <script src="../../scripts/classification.js"></script>
 
