Adds placeholder for features

--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -47,7 +47,9 @@ path.link {
     <option value="10">10</option>
     </select>
   <p>{{number}} random trees showing</p>
-
+  <div>
+    <features></features>
+  </div>
   <div>
     <random-forest></random-forest>
   </div>
