--- a/views/index.html
+++ b/views/index.html
@@ -46,12 +46,14 @@
               </ul>
             </div>
           </div>
-        </div>    
+        </div>
       </div>
     </div>
 
     <div id="container">
-      <div ng-view></div>
+      <center>
+        <div ng-view='  '></div>
+      </center>
     </div>
 
   </body>
