adds a def html tag and image tag to use in d3 for svg circle backgrounds

--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -31,6 +31,12 @@ path.link {
 </head>
 
 <body ng-app="galaxyApp">
+    <svg id="imgSVG" width="0" height="0">
+      <defs id="mdef">
+        <pattern id="image" x="0" y="0" height="40" width="40">
+          <image x="0" y="0" width="40" height="40" xlink:href="../../images/pinkie_pie.png"></image>
+        </pattern>
+  </defs>
   <br/><br/><br/><br/>
   <visualization>
     <features>
