--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -91,16 +91,16 @@ svg {
       <h2 class="featurette-heading">The Hypothesis <span class="text-muted">Finding a Line to Fit the Data </span></h2>
       <p class="lead">The learning algorithm uses the training data as input and outputs a function (called the hypothesis).  
       </p>
-      <p class="lead">Example: Linear Regression with One Variable and Housing Prices in Oregon<br>
+      <p class="lead">Example: Housing Prices in Oregon / Linear Regression<br>
         The hypothesis takes in as input the size-of-house feature and outputs an estimated target value for the price.
       </p>
       <p class="lead">
         We represent this hypothesis as a linear function in this example:<br>
-        h<sub align='right'>&theta;</sub>(x) = &theta;<sub align='right'>0</sub> + &theta;<sub algin='right'>1</sub>x
+        <img class="featurette-image img-responsive" src="../../images/hypothesisfunction.png">
       </p>
     </div>
     <div class="col-md-5">
-      <img class="featurette-image img-responsive" src="../../images/hypothesis.png">
+      <img class="featurette-image img-responsive" src="../../images/hypothesisgraph.png">
 
       <!-- <div class='hypothesis'> -->
       <!-- </div> -->
@@ -112,16 +112,17 @@ svg {
 
   <div class="row featurette">
     <div class="col-md-5">
-      <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <img class="featurette-image img-responsive" src="holder.js/500x500/auto" alt="Generic placeholder image">
       <!-- <div class='costfunction'> -->
       <!-- </div> -->
     </div>
     <div class="col-md-7">
       <h2 class="featurette-heading">Cost Function <span class="text-muted">Finding the Right Parameters</span></h2>
     </div>
-      <p class="lead">The cost function helps us figure out how to fit the best possible straight line to our data.  We need to find the right parameters (&theta;<sub align='right'>0</sub> and &theta;<sub algin='right'>1</sub> are the parameters in our hypothesis  h<sub align='right'>&theta;</sub>(x) = &theta;<sub align='right'>0</sub> + &theta;<sub algin='right'>1</sub>x) 
+      <p class="lead">The cost function helps figure out how to fit the best possible straight line to our data by minimizing the parameters &theta;<sub align='right'>0</sub> and &theta;<sub algin='right'>1</sub> so that the hypothesis h<sub>&theta;</sub>(x) is as close as possible to the known output (y) for each observed input (from 1 to m) in the training data.
       </p>
-      <p class="lead">Example: Linear Regression
+      <p class="lead">The cost function (also known as the squared error function) looks like the following:<br>
+        <img class="featurette-image img-responsive" src="../../images/costfunction.png">
       </p>
   </div>
 
