--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
     <script src='../scripts/randomTreeGenerator.js'></script>
     <script src='../scripts/app.js'></script>
     <script src="../../scripts/controllers/mlintro.js"></script>
+    <script src='../scripts/directives/visualizationDirective.js'></script>
     <script src='../scripts/directives/randomForestsDirective.js'></script>
     <script src='../scripts/directives/featuresDirective.js'></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
