trees fade on remove

--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -56,11 +56,11 @@ path.link {
       </div>
       <random-forest>
         <div class = "text">
-          The number of trees made for our model is specified by the user. The first feature and solution set stimulates the creation of the full tree set(the random forest). Further feature/solution sets will refine this forest of decision trees to make more accurate predictions.
+          The user can specify the number of trees the algorithm will make. The first feature and solution set stimulates the creation of the full tree set (the random forest). Further feature/solution sets will refine this forest of decision trees to make more accurate predictions.
         </div>
       </random-forest>
       <div class = "text">
-        Each trained decision tree alone is a weak estimator. This means that a single decision tree has little predictive power. When many (often thousands or more) of these weak estimators are used together, they become a surprisingly accurate predictor. This is done through a process called bootstrapped aggregation.
+        Each trained decision tree alone is a weak estimator. This means that a single decision tree has little predictive power. When many (often thousands or more) of these weak estimators results are combined, we are given a suprisingly accurate prediction.  This is done through a process called bootstrapped aggregation. 
       </div>
     </visualization>
   </div>
