added centering of algorithm page items

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -11,6 +11,10 @@ body {
   text-align: center;
 }
 
+.algo {
+  margin-left: 10%;
+}
+
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
