--- a/public/views/partials/algorithms.html
+++ b/public/views/partials/algorithms.html
@@ -1,42 +1,26 @@
 <div class="container contact" ng-controller='AlgorithmsController'>
-
-<!--   <div class="row featurette">
-    <div class="col-md-5">
-      <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-    </div>
-    <div class="col-md-7">
-      <h2 class="featurette-heading">Algorithms <span class="text-muted">See for yourself.</span></h2>
-    </div>
-      <p class="lead">Faded image of a visualized algorithm, clicking details leads to our algorithm page</p>
-  </div>
- -->
-
-  <div class="row">
-  </div>
   <br><br><br><br><br>
-
  <div class="row">
-  <div class='col-lg-4'>
+  <div class='algo col-lg-4'>
     <img class="img-circle" alt="140x140" src="../../images/machine-learning.jpg" style="width: 140px; height: 140px;">
    <h2>Machine Learning</h2>
     <p>A simple introduction to regression, classification, and training algorithms on data sets.</p>
     <p><a class='btn btn-default' href='/mlintro' role='button'>View Details</a>
   </div>
-  <div class='col-lg-4'>
+  <div class='algo col-lg-4'>
     <img class="img-circle" alt="140x140" src="../../images/Forest.jpg" style="width: 140px; height: 140px;">
       <h2>Random Forests</h2>
       <p>See an visualized example of how our Random Forest algorithm works</p>
     <p><a class='btn btn-default' href='/randomForests' role='button'>View Details</a>
   </div>
-  <div class='col-lg-4'>
+<!--   <div class='col-lg-4'>
     <img class="img-circle" alt="140x140" src="../../images/small-neural-pic.jpg" style="width: 140px; height: 140px;">
     <h2>Neural Networks</h2>
     <p>Some text here</p>
     <p><a class='btn btn-default' href='/neuralNet' role='button'>View Details</a>
-  </div>
-
+  </div> -->
+</center>
  </div>
-
 </div>
 
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
