--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/galaxyclass">Galaxy Classification Example</a></li>
                 <li><a href="/contact">The Team</a></li>
                 <li><a href='/algorithms'>Algorithms</a><li>
