--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../styles/bootstrapDist/js/bootstrap.min.js"></script>
     <script src="../styles/bootstrapIndexAssets-js/docs.min.js"></script>
     <script src='../bower_components/angular/angular.js'></script>
@@ -13,7 +13,7 @@
     <script src='../scripts/directives/visualizationDirective.js'></script>
     <script src='../scripts/directives/randomForestsDirective.js'></script>
     <script src='../scripts/directives/featuresDirective.js'></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="../bower_components/d3/d3.min.js" charset="utf-8"></script>
 
     <link rel="shortcut icon" href="./../assets/ico/favicon.ico">
     <link rel='stylesheet' href="../styles/bootstrapDist/css/bootstrap.min.css" >
