--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -14,6 +14,20 @@ body {
 .algo {
   margin-left: 10%;
 }
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.regression {
+  font: 10px sans-serif;
+}
 
 
 /* CUSTOMIZE THE NAVBAR
