--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -28,6 +28,41 @@ body {
 .regression {
   font: 10px sans-serif;
 }
+.node circle {
+  cursor: pointer;
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+.vis {
+  border: 1px solid black;
+}
+.path {
+  fill: steelblue;
+}
+.node text {
+  font-size: 11px;
+}
+
+path.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
+}
+.text {
+  width: 85%;
+  padding: 15px;
+}
+
+.content {
+  margin-top: 6%;
+}
+
+.d3features {
+  width: 90%;
+}
+
+
 
 
 /* CUSTOMIZE THE NAVBAR
