--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -1,56 +1,10 @@
-<head>
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
-
-    <style>
-.node circle {
-  cursor: pointer;
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-.vis {
-  border: 1px solid black;
-}
-.path {
-  fill: steelblue;
-}
-.node text {
-  font-size: 11px;
-}
-
-path.link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
-}
-.text {
-  width: 85%;
-  padding: 15px;
-}
-
-.content {
-  margin-top: 6%;
-}
-
-.d3features {
-  width: 90%;
-}
-
-
-
-</style>
-
-
-</head>
-
 <body ng-app="galaxyApp">
   <div class = "content">
     <visualization>
       <div class = "d3features">
         <features> 
           <div class = "text">
-             All machine learning algorithms take inputs that describe the data we are trying to analyze. These descriptors are often called input "features". A random forest learning algorithm will take a random sampling of the features given to it and feed them into a decision tree:
+             All machine learning algorithms take inputs that describe the data we are trying to analyze. These descriptors are often called input "features". A random forest machine learning algorithm will build decision trees based on these features.  At each node along the tree, a decision is made.  The tree then will pick a new set of features to make a decision on, again at random, until the maximum depth of the tree is reached.  The user can set this maximum value or let the tree exhaust all possibilities on its own.
         </div>
         </features>
       </div>
@@ -60,7 +14,7 @@ path.link {
         </div>
       </random-forest>
       <div class = "text">
-        Each trained decision tree alone is a weak estimator. This means that a single decision tree has little predictive power. When many (often thousands or more) of these weak estimators results are combined, we are given a suprisingly accurate prediction.  This is done through a process called bootstrapped aggregation. 
+        Each trained decision tree alone is a weak estimator. This means that a single decision tree has little predictive power.  It also means that each tree can vary wildly in its prediction.  This difference in their predictions is called variance.  When many (often thousands or more) of these weak estimators results are combined, we are given a suprisingly accurate prediction.  This is done through a process called bootstrapped aggregation.  
       </div>
     </visualization>
   </div>
