--- a/public/views/partials/galaxyclass.html
+++ b/public/views/partials/galaxyclass.html
@@ -1,16 +1,13 @@
 <div class="container galaxyclass" ng-controller='GalaxyClassController'>
-
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading">Galaxy Morphology Use Case <span class="text-muted">It'll blow your mind.</span></h2>
-      <p class="lead">Image of galaxy and information about this example</p>
-    </div>
-    <div class="col-md-5">
-      <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-    </div>
-  </div>      
-
+  <div class="content">
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Galaxy Morphology Use Case <span class="text-muted">It'll blow your mind.</span></h2>
+        <p class="lead">Image of galaxy and information about this example</p>
+      </div>
+      <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="../images/galaxyFlow.png">
+      </div>
+    </div>      
+  </div>
 </div>
-
-<script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
-<script src="../../styles/bootstrapIndexAssets-js/docs.min.js"></script>
