added main area to content div to separate from navbar

--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -1,5 +1,5 @@
 <div class="container index" ng-controller='MainController'>
-  
+  <div class="content">
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval=3000>
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -99,7 +99,7 @@
       </footer>
 
     </div><!-- /.container -->
-
+  </div>
 </div>
 
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
