added image to main page, link to algo page, add text

--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -67,12 +67,14 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <a href="#/algorithms">
+            <img class="featurette-image img-responsive" src="../images/machinelearninglogo.jpg"></a>
+          <p>Credit: <a href="https://www.coursera.org/course/machlearning">coursera.org</a></p>
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Algorithms <span class="text-muted">See for yourself.</span></h2>
+          <h2 class="featurette-heading">Machine Learning. <span class="text-muted">The Basics</span></h2>
         </div>
-          <p class="lead">Faded image of a visualized algorithm, clicking details leads to our algorithm page</p>
+          <p class="lead"></p>Explore the fundamentals of machine learning and see how a Random Forest algorithm works.</p>
       </div>
 
       <hr class="featurette-divider">
