--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -2,11 +2,6 @@
   <div class="content">
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval=3000>
       <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
       <div class="carousel-inner">
         <div class="item active">
           <!-- <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide"> -->
@@ -18,24 +13,6 @@
             </div>
           </div>
         </div>
-        <div class="item">
-          <img src="http://mesosyn.com/galaxy-1.jpg">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Galaxy Zoo Competition</h1>
-              <p><a class="btn btn-lg btn-primary" href="#/galaxyclass" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Our Team</h1>
-              <p><a class="btn btn-lg btn-primary" href="#/contact" role="button">Read Our Bios</a></p>
-            </div>
-          </div>
-        </div>
       </div>
 <!--       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
@@ -43,7 +20,7 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
- -->    </div><!-- /.carousel -->
+ --></div><!-- /.carousel -->
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
@@ -76,7 +53,7 @@
         </div>
           <p class="lead"></p>Explore the fundamentals of machine learning and see how a Random Forest algorithm works.</p>
       </div>
-
+<!-- 
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -87,7 +64,7 @@
         <div class="col-md-5">
           <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
-      </div>
+      </div> -->
 
       <hr class="featurette-divider">
 
