changed anghor tags to go to new locations and changed navbar with new links

--- a/views/index.html
+++ b/views/index.html
@@ -41,9 +41,8 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
-                <li><a href="/galaxyclass">Galaxy Classification Example</a></li>
-                <li><a href="/contact">The Team</a></li>
-                <li><a href='/algorithms'>Algorithms</a><li>
+                <li><a href='/theGuide'>The Guide</a><li>
+                <li><a href="/team">The Team</a></li>
                 </li>
               </ul>
             </div>
