Adds team photos to team page

--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -2,7 +2,7 @@
 
   <div class="row featurette">
     <div class="col-md-5">
-      <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <img class="featurette-image img-responsive" src="../../images/teamwhole.jpg" alt="Team image">
     </div>
     <div class="col-md-7">
       <h2 class="featurette-heading">The Team<span class="text-muted">Info</span></h2>
@@ -10,6 +10,29 @@
       <p class="lead">More info</p>
   </div>
 
+  <div class="row">
+  	<div class='col-lg-4'>
+      <img class="img-circle" alt="140x140" src="../../images/team1.jpg" style="width: 140px; height: 140px;">
+  	</div>
+  	<div class='col-lg-4'>
+  	  <img class="img-circle" alt="140x140" src="../../images/team2.jpg" style="width: 140px; height: 140px;">
+  	</div>
+  	<div class='col-lg-4'>
+  	  <img class="img-circle" alt="140x140" src="../../images/team3.jpg" style="width: 140px; height: 140px;">
+  	</div>
+  </div>
+
+  <div class='col-lg-4'>
+  	<div class="">
+  	  <img class="img-circle" alt="140x140" src="../../images/team4.jpg" style="width: 140px; height: 140px;">
+  	</div>
+  	<div class='col-lg-4'>
+  	  <img class="img-circle" alt="140x140" src="../../images/team5.jpg" style="width: 140px; height: 140px;">
+  	</div>
+  	<div class='col-lg-4'>
+  	  <img class="img-circle" alt="140x140" src="../../images/team6.jpg" style="width: 140px; height: 140px;">
+  	</div>
+  </div>
 
 </div>
 
