--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -8,8 +8,8 @@
           <img src="../images/machine-learning.jpg">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Machine Learning Algorithms</h1>
-              <a class="btn btn-lg btn-primary" href="#/algorithms" role="button">View Now</a></p>
+              <h1>Hitchhikers Guide to Classifying Galaxies: Implementing your machine learning algorithm</h1>
+              <a class="btn btn-lg btn-primary" href="#/theGuide" role="button">View Now</a></p>
             </div>
           </div>
         </div>
@@ -30,7 +30,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Galaxy Morphology Use Case <span class="text-muted">It'll blow your mind.</span></h2>
+          <h2 class="featurette-heading">Hitchhikers Guide to Classifying Galaxies: <span class="text-muted">Implementing your machine learning algorithm</span></h2>
           <p class="lead">Image of galaxy and information about this example</p>
         </div>
         <div class="col-md-5">
@@ -40,7 +40,7 @@
 
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
+<!--       <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-5">
@@ -53,19 +53,7 @@
         </div>
           <p class="lead"></p>Explore the fundamentals of machine learning and see how a Random Forest algorithm works.</p>
       </div>
-<!-- 
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">The Team <span class="text-muted">Checkmate</span></h2>
-          <p class="lead">Our Bios/Blogs</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div> -->
-
+ -->
       <hr class="featurette-divider">
 
       <!-- /END THE FEATURETTES -->
