removed center tags.  we'll do this with css to avoid a global centering

--- a/public/views/partials/dataExplaination.html
+++ b/public/views/partials/dataExplaination.html
@@ -1,1 +1,11 @@
-dataExplaination.html
+<div>
+  <div class="chapterTitle">
+    <h1>Preparing for our journey</h1>
+  </div>
+  <div class="chapter">
+    a
+  </div>
+  <div class="chapterTitle">
+    <h1>Our learnings</h1>
+  </div>
+</div>
