--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -11,26 +11,37 @@
   </div>
 
   <div class="row">
-  	<div class='col-lg-4'>
-      <img class="img-circle" alt="140x140" src="../../images/team1.jpg" style="width: 140px; height: 140px;">
+  	<div class='col-md-4'>
+      <img class="img-circle" alt="200x200" src="../../images/team1.jpg" style="width: 200px; height: 200px;">
+      <a href="https://github.com/sona82" class="icon">
+        <i class="icon-github">
+        </i>
+      </a>
+      <div>Jeanette</div>
+  </a>
   	</div>
-  	<div class='col-lg-4'>
-  	  <img class="img-circle" alt="140x140" src="../../images/team2.jpg" style="width: 140px; height: 140px;">
+  	<div class='col-md-4'>
+  	  <img class="img-circle" alt="200x200" src="../../images/team2.jpg" style="width: 200px; height: 200px;">
+  	  <div>Vinnie</div>
   	</div>
-  	<div class='col-lg-4'>
-  	  <img class="img-circle" alt="140x140" src="../../images/team3.jpg" style="width: 140px; height: 140px;">
+  	<div class='col-md-4'>
+  	  <img class="img-circle" alt="200x200" src="../../images/team3.jpg" style="width: 200px; height: 200px;">
+  	  <div>Charles</div>
   	</div>
   </div>
 
-  <div class='col-lg-4'>
+  <div class='col-md-4'>
   	<div class="">
-  	  <img class="img-circle" alt="140x140" src="../../images/team4.jpg" style="width: 140px; height: 140px;">
+  	  <img class="img-circle" alt="200x200" src="../../images/team4.jpg" style="width: 200px; height: 200px;">
+  	  <div>Kwyn</div>
   	</div>
-  	<div class='col-lg-4'>
-  	  <img class="img-circle" alt="140x140" src="../../images/team5.jpg" style="width: 140px; height: 140px;">
+  	<div class='col-md-4'>
+  	  <img class="img-circle" alt="200x200" src="../../images/team5.jpg" style="width: 200px; height: 200px;">
+  	  <div>Scott</div>
   	</div>
-  	<div class='col-lg-4'>
-  	  <img class="img-circle" alt="140x140" src="../../images/team6.jpg" style="width: 140px; height: 140px;">
+  	<div class='col-md-4'>
+  	  <img class="img-circle" alt="200x200" src="../../images/team6.jpg" style="width: 200px; height: 200px;">
+  	  <div>Sonali</div>
   	</div>
   </div>
 
@@ -38,4 +49,5 @@
 
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
 <script src="../../styles/bootstrapIndexAssets-js/docs.min.js"></script>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
