--- a/public/views/partials/dataExplaination.html
+++ b/public/views/partials/dataExplaination.html
@@ -3,9 +3,18 @@
     <h1>Preparing for our journey</h1>
   </div>
   <div class="chapter">
-    a
+    As our heros begin, they must understand all that is, and where they shall go. Our heros had been passed many pictures of galaxies. Understanding the input shape and the different elements available to us in the input allowed us to gain a strong footing on what we were able to work with in the coming times.
+    Furthermore, our heros worked hard to discover where they were going. They found that they were expected to produce guestimations on the likelihood that given a picture what kind of galaxy it was. 
+    Furthermore, the heros were being judged on their ability to reproduce a classification set up by thousands before them.
+    They had to understand what was required of them as they moved forward. Finally they had to understand the method by which
+    they were being tested. The real mean squared error testing.
   </div>
   <div class="chapterTitle">
     <h1>Our learnings</h1>
+    During our quest to understand the data we found several best practices. 
+    Understanding your data
+    Understanding your results
+    Defining your measurement
+    Make sure that your data set is standardized and links to do that
   </div>
 </div>
