--- a/public/views/partials/iterationAndTesting.html
+++ b/public/views/partials/iterationAndTesting.html
@@ -1,1 +1,15 @@
-iterationAndTesting.html
+<div>
+  <div class="chapterTitle">
+    <h2>Chapter 3: Building our 1st Machine and Test Flight</h2>
+    <h3>One sentence header on the chapter (non space themed)</h3>
+  </div>
+  <div class="chapter">
+    Scribe your journey here, as we document our space quest
+  </div>
+  <div class="chapterTitle">
+    <h2>Our Learnings and Discovered Best Practices</h2>
+  </div>
+  <div class="chapter">
+    Scribe our learnings here, as we document for future space cadets
+  </div>
+</div>
