--- a/public/views/partials/theguide.html
+++ b/public/views/partials/theguide.html
@@ -5,7 +5,7 @@
   <a ng-click="subPage='../views/partials/dataExplaination.html'">Discovering our Data</a> |
   <a ng-click="subPage='../views/partials/randomForests.html'">Researching Our Path</a> |
   <a ng-click="subPage='../views/partials/iterationAndTesting.html'">Building our 1st Machine and Test Flight</a> |
-  <a ng-click="subPage='../views/partials/improvingYourAlgorithm.html'">Optimizing Our Machine and Travelling Into The Galaxies</a><br/>
+  <a ng-click="subPage='../views/partials/improvingYourAlgorithm.html'">Optimizing Our Machine and Travelling Into Space</a><br/>
 
   <div class = "feature">
     <div class="default">
