--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -1,14 +1,20 @@
 <body ng-app="galaxyApp">
-  <div class = "content">
-    <visualization>
-      <div class = "d3features">
-        <features> 
-          <div class = "text">
-             All machine learning algorithms take inputs that describe the data we are trying to analyze. These descriptors are often called input "features". A random forest machine learning algorithm will build decision trees based on these features.  At each node along the tree, a decision is made.  The tree then will pick a new set of features to make a decision on, again at random, until the maximum depth of the tree is reached.  The user can set this maximum value or let the tree exhaust all possibilities on its own.
+  <div>
+  <div class="chapterTitle">
+    <h2>Chapter 2: Researching our Path</h2>
+    <h3>One sentence header on the chapter (non space themed)</h3>
+  </div>
+  <div class="chapter">
+    <div class = "content">
+      <visualization>
+        <div class = "d3features">
+          <features> 
+            <div class = "text">
+               All machine learning algorithms take inputs that describe the data we are trying to analyze. These descriptors are often called input "features". A random forest machine learning algorithm will build decision trees based on these features.  At each node along the tree, a decision is made.  The tree then will pick a new set of features to make a decision on, again at random, until the maximum depth of the tree is reached.  The user can set this maximum value or let the tree exhaust all possibilities on its own.
+          </div>
+          </features>
         </div>
-        </features>
-      </div>
-      <random-forest>
+        <random-forest>
         <div class = "text">
           The user can specify the number of trees the algorithm will make. The first feature and solution set stimulates the creation of the full tree set (the random forest). Further feature/solution sets will refine this forest of decision trees to make more accurate predictions.
         </div>
@@ -20,5 +26,13 @@
         adds some additional explanation
       </div>
     </visualization>
+    </div>
   </div>
+  <div class="chapterTitle">
+    <h2>Our Learnings and Discovered Best Practices</h2>
+  </div>
+  <div class="chapter">
+    Scribe our learnings here, as we document for future space cadets
+  </div>
+</div>
 </body>
