added a chart to represent error

--- a/public/views/partials/improvingYourAlgorithm.html
+++ b/public/views/partials/improvingYourAlgorithm.html
@@ -1,1 +1,5 @@
-improvingYourAlgorithm.html
+<div class = "chart">
+  <div class="errorChart"></div>
+</div>
+<script src="../scripts/c3chart.js"></script>
+
