added links to c3 style and c3.js

--- a/views/index.html
+++ b/views/index.html
@@ -14,10 +14,13 @@
     <script src='../scripts/directives/randomForestsDirective.js'></script>
     <script src='../scripts/directives/featuresDirective.js'></script>
     <script src="../bower_components/d3/d3.min.js" charset="utf-8"></script>
+    <script src="../bower_components/c3/c3.min.js"></script>
 
     <link rel="shortcut icon" href="./../assets/ico/favicon.ico">
     <link rel='stylesheet' href="../styles/bootstrapDist/css/bootstrap.min.css" >
     <link href="../styles/index.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../bower_components/c3/c3.css">
+
 
     <title>A Visual Guide to Machine Learning</title>
 
